# eternity-engine

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
configs/: races.yaml
docs/: VISION.md  pull_request_template.md
schemas/: races.schema.json
scripts/: engine_run.py
src/eternity_engine/: engine.py
src/eternity_engine/ai/: backend_ollama.py  interpreter.py  ports.py
src/eternity_engine/core/cultivators/: __init__.py  cultivator.py  ports.py  race.py
src/eternity_engine/cultivators/: __init__.py  cultivator.py
src/eternity_engine/infra/: __init__.py  catalog.py  config_settings.py
src/eternity_engine/infra/config/: __init__.py  race_repo.py
src/eternity_engine/io/: config_loader.py  validation.py
